# SudokuOCR

./: CMakeLists.txt  Core.cpp  Core.h  ImageDisplay.cpp  ImageDisplay.h  ImgSelectorButton.cpp  ImgSelectorButton.h  Matrix.cpp  Matrix.h  README.md  ShapeDefiner.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testall.sh
GUI/: ImageDisplay.cpp  ImageDisplay.h  ImgSelectorButton.cpp  ImgSelectorButton.h  ShapeDefiner.cpp  ShapeDefiner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Imagery/: GridDetection.cpp  GridDetection.h  Imagery.cpp  Imagery.h
NeuralNetwork/: ActivationFunction.cpp  ActivationFunction.h  CostFunction.cpp  CostFunction.h  Custom3Generator.cpp  DatasetGenerator.py  DatasetManager.cpp  DatasetManager.h  Layer.cpp  Layer.h  Network.cpp  Network.h  NetworkUtils.cpp  NetworkUtils.h  Optimizer.cpp  Optimizer.h
Tools/: FileManagement.cpp  FileManagement.h  List.cpp  List.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Settings.h  Solver.cpp  Solver.h
